--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: devkitpro/devkitppc
+    container: devkitpro/devkitarm
 
     steps:
       - uses: actions/checkout@v2
@@ -29,7 +29,7 @@ jobs:
 
       - name: Compile tests
         run: |
-          make -C tests/triangle
+          make -C tests/swkbd
 
       - name: Upload binaries
         uses: actions/upload-artifact@v2
