--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Compile tests
         run: |
-          make -C tests/software_keyboard
+          make -C tests/software-keyboard
 
       - name: Upload binaries
         uses: actions/upload-artifact@v2
