--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,8 @@ jobs:
         run: |
           make -C tests/software-keyboard
           make -C tests/mii-selector
+          make -C tests/crotools/example_cro
+          make -C tests/crotools/example_inject
 
       - name: Upload binaries
         uses: actions/upload-artifact@v2
